fixed an error in hover spacing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
 h2 {
     letter-spacing: 10px;
     text-align-last: center;
-    .grow { 
+    . { 
         transition: all .2s ease-in-out; 
         }
         
@@ -27,4 +27,8 @@ P {
 }
 
 
- 
+h2:hover {
+    text-align: center;
+    letter-spacing: 20px;
+    /* letter-spacing: 1.7vmax; */
+  }
